--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_list-of-goods-hooks",
+  "name": "react_list-of-goods-js",
   "homepage": ".",
   "version": "0.1.0",
   "keywords": [],
@@ -16,13 +16,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@mate-academy/eslint-config-react-typescript": "latest",
-    "@mate-academy/scripts": "^1.7.9",
-    "@mate-academy/students-ts-config": "latest",
+    "@mate-academy/eslint-config-react": "latest",
+    "@mate-academy/scripts": "^1.8.1",
     "@mate-academy/stylelint-config": "latest",
-    "@types/node": "^16.18.80",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
     "cypress": "^12.17.4",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -33,17 +29,17 @@
     "postcss": "^8.4.12",
     "prettier": "^3.2.5",
     "sass": "^1.72.0",
-    "stylelint": "^15.11.0",
-    "typescript": "5.1.6"
+    "stylelint": "^15.11.0"
   },
   "scripts": {
     "start": "mate-scripts start -l",
     "build": "mate-scripts build",
     "test": "mate-scripts test -l",
+    "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
     "lint-js": "mate-scripts lint -j",
     "lint-css": "mate-scripts lint -s",
-    "format": "prettier --write './src/**/*.{ts,tsx}'",
-    "lint": "npm run format && npm run lint-js && npm run lint-css",
+    "format": "prettier --write './src/**/*.{js,jsx}'",
+    "lint": "npm run style-format && npm run format && npm run lint-js && npm run lint-css",
     "update": "mate-scripts update",
     "postinstall": "npm run update && cypress verify",
     "predeploy": "npm run build",
@@ -62,8 +58,7 @@
     ]
   },
   "mateAcademy": {
-    "_comment": "Replace 'reactTypescript' with 'react' if you want use React without Typescript",
-    "projectType": "reactTypescript",
+    "projectType": "react",
     "tests": {
       "_comment": "Add `cypressComponents: true` to enable component tests",
       "cypress": true
